--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -11472,8 +11472,8 @@ section.horizontal .animation-wrap.to-left {
   font-family: 'Bebas Neue';
 }
 .blog-details {
-  margin-top: 3%;
-  margin-bottom: 11%;
+  margin-top: 15%;
+  margin-bottom: 1%;
 }
 .blog-details .container {
   width: 80%;
@@ -11494,17 +11494,78 @@ section.horizontal .animation-wrap.to-left {
   letter-spacing: 1px;
   color: #3d3d3d;
   font-family: 'NeueHaasDisplay-me';
-  -webkit-transform: translateY(210px) !important;
-          transform: translateY(210px) !important;
 }
 .blog-details .container .content h1 {
-  font-size: 6em;
+  font-size: 3.5em;
   padding: 0px 5%;
   text-align: center;
   line-height: 1.4;
   font-family: 'NeueHaasDisplay-roman';
-  -webkit-transform: translateY(210px);
-          transform: translateY(210px);
+  color: #000;
+  text-shadow: 1px 1px 10px #0006;
+}
+.blog-details .blog-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 70%;
+  margin: 0 auto;
+}
+.overlap-text p {
+  -webkit-user-select: auto;
+     -moz-user-select: auto;
+      -ms-user-select: auto;
+          user-select: auto;
+  font-size: 4em;
+  font-family: 'NeueHaasDisplay-me';
+  margin-top: -45px;
+  color: #fff;
+  /* text-shadow: 1px 1px 11px #0000002e; */
+  text-shadow: 10px 10px 20px #00000029;
+}
+.blog-d {
+  margin: 7% 0;
+}
+.blog-d .container {
+  width: 80%;
+}
+.blog-d .container .blog-prha {
+  text-align: center;
+  font: italic normal bold 18px/28px Ageo;
+  letter-spacing: 2.1px;
+  color: #2B2B2B;
+}
+.blog-d .container p {
+  margin-bottom: 5%;
+  text-align: center;
+  letter-spacing: 1px;
+}
+.blog-d .container .blockquote {
+  position: relative;
+}
+.blog-d .container .blockquote span {
+  position: absolute;
+  left: -40px;
+}
+.blog-d .container .blockquote span img {
+  width: 35px;
+}
+.blog-d .container .content .typ {
+  text-align: center;
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: #3d3d3d;
+  font-family: 'NeueHaasDisplay-me';
+}
+.blog-d .container .content h1 {
+  font-size: 3.5em;
+  padding: 0px 5%;
+  text-align: center;
+  line-height: 1.4;
+  font-family: 'NeueHaasDisplay-roman';
   color: #000;
   text-shadow: 1px 1px 10px #0006;
 }
@@ -11576,13 +11637,11 @@ section.horizontal .animation-wrap.to-left {
     padding: 0px 3%;
   }
   .blog-details .container .content h1 {
-    font-size: 5em;
+    font-size: 3.5em;
     padding: 0px 5%;
     text-align: center;
     line-height: 1.4;
     font-family: 'NeueHaasDisplay-me';
-    -webkit-transform: translateY(210px);
-            transform: translateY(210px);
     color: #000;
     text-shadow: 1px 1px 12px rgba(0, 0, 0, 0.219);
   }
