--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -383,8 +383,8 @@
 }
 
 .blog-details {
-    margin-top: 3%;
-    margin-bottom: 11%;
+    margin-top: 15%;
+    margin-bottom: 1%;
 
     .container {
         width: 80%;
@@ -407,16 +407,91 @@
                 letter-spacing: 1px;
                 color: rgb(61, 61, 61);
                 font-family: 'NeueHaasDisplay-me';
-                transform: translateY(210px) !important;
+                // transform: translateY(210px) !important;
             }
 
             h1 {
-                font-size: 6em;
+                font-size: 3.5em;
                 padding: 0px 5%;
                 text-align: center;
                 line-height: 1.4;
                 font-family: 'NeueHaasDisplay-roman';
-                transform: translateY(210px);
+                // transform: translateY(210px);
+                color: #000;
+                text-shadow: 1px 1px 10px #0006;
+            }
+        }
+    }
+
+    .blog-flex {
+        display: flex;
+        justify-content: space-evenly;
+        width: 70%;
+        margin: 0 auto;
+    }
+}
+
+.overlap-text {
+    p {
+        user-select: auto;
+        font-size: 4em;
+        font-family: 'NeueHaasDisplay-me';
+        margin-top: -45px;
+        color: #fff;
+        /* text-shadow: 1px 1px 11px #0000002e; */
+        text-shadow: 10px 10px 20px #00000029;
+    }
+}
+
+.blog-d {
+    margin: 7% 0;
+
+    .container {
+        width: 80%;
+
+        .blog-prha {
+            text-align: center;
+            font: italic normal bold 18px/28px Ageo;
+            letter-spacing: 2.1px;
+            color: #2B2B2B;
+        }
+
+        p {
+            margin-bottom: 5%;
+            text-align: center;
+            letter-spacing: 1px;
+        }
+
+        .blockquote {
+            position: relative;
+
+            span {
+                position: absolute;
+                left: -40px;
+
+                img {
+                    width: 35px;
+                }
+            }
+        }
+
+        .content {
+            .typ {
+                text-align: center;
+                font-size: 14px;
+                letter-spacing: 1px;
+                color: rgb(61, 61, 61);
+                font-family: 'NeueHaasDisplay-me';
+                // transform: translateY(210px) !important;
+            }
+
+            h1 {
+                font-size: 3.5em;
+                padding: 0px 5%;
+                text-align: center;
+                line-height: 1.4;
+                font-family: 'NeueHaasDisplay-roman';
+                // transform: translateY(210px);
                 color: #000;
                 text-shadow: 1px 1px 10px #0006;
             }
@@ -506,12 +581,12 @@
     }
 
     .blog-details .container .content h1 {
-        font-size: 5em;
+        font-size: 3.5em;
         padding: 0px 5%;
         text-align: center;
         line-height: 1.4;
         font-family: 'NeueHaasDisplay-me';
-        transform: translateY(210px);
+        // transform: translateY(210px);
         color: #000;
         text-shadow: 1px 1px 12px rgba(0, 0, 0, 0.219);
     }
