--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -386,7 +386,7 @@
       span {
         display: block;
         color: transparent;
-        background-image: radial-gradient(farthest-corner at center 0px, grey 0%, black 100%);
+        background-image: radial-gradient(farthest-corner at center 0px, #919ccd 0%, black 100%);
         -webkit-background-clip: text;
         background-clip: text;
         background-size: 200% auto;
