--- a/assets/resources/styles/css/page.css
+++ b/assets/resources/styles/css/page.css
@@ -8087,7 +8087,7 @@ header {
 .ser-hero .top-h h1 span {
   display: block;
   color: transparent;
-  background-image: radial-gradient(farthest-corner at center 0px, grey 0%, black 100%);
+  background-image: radial-gradient(farthest-corner at center 0px, #919ccd 0%, black 100%);
   -webkit-background-clip: text;
   background-clip: text;
   background-size: 200% auto;
@@ -11543,15 +11543,23 @@ section.horizontal .animation-wrap.to-left {
   text-align: center;
   letter-spacing: 1px;
 }
-.blog-d .container .blockquote {
+.blog-d .container blockquote {
+  text-align: center;
+  font: italic normal bold 24px/29px Ageo;
+  letter-spacing: 3.6px;
+  font-family: 'Ageo-Bold';
+  color: #2B2B2B;
   position: relative;
 }
-.blog-d .container .blockquote span {
+.blog-d .container blockquote::after {
+  content: '';
+  background-image: url('/assets/resources/img/Service-elements/quote-icon.svg');
   position: absolute;
-  left: -40px;
-}
-.blog-d .container .blockquote span img {
-  width: 35px;
+  left: 40px;
+  background-size: contain;
+  width: 51px;
+  height: 40px;
+  background-repeat: no-repeat;
 }
 .blog-d .container .content .typ {
   text-align: center;
