--- a/assets/resources/styles/less/modules/_blog.less
+++ b/assets/resources/styles/less/modules/_blog.less
@@ -466,6 +466,15 @@
     }
 }
 
+.author {
+    margin-top: 10px !important;
+
+    img {
+        width: 38px;
+        margin-right: 10px;
+    }
+}
+
 .overlap-text {
     p {
         user-select: auto;
