--- a/assets/resources/styles/less/modules/_hero-section.less
+++ b/assets/resources/styles/less/modules/_hero-section.less
@@ -250,6 +250,7 @@
                 font-family: 'Ageo';
                 color: #ffffff;
                 letter-spacing: 0.20em;
+                padding: 0 10px;
             }
 
             .chapt-icon {
@@ -542,11 +543,17 @@
         }
 
         .t-lead {
-            font-size: 1.2em;
-            line-height: 1.3;
-            font-weight: 400;
-            letter-spacing: 0em;
-            margin-bottom: 7px;
+            margin-top: 0px;
+            margin-bottom: 40px;
+            font-size: 1.7em;
+            font-variant: small-caps;
+            line-height: 1.5;
+            /* font-weight: 400; */
+            text-shadow: none;
+            font-synthesis: none;
+            letter-spacing: 0.07em;
+            /* text-transform: uppercase; */
+            font-family: 'Ageo';
         }
 
         .o-container {
@@ -805,6 +812,7 @@
                 font-weight: normal;
                 font-family: 'Ageo';
                 letter-spacing: 0.20em;
+
             }
 
             .chapt-icon {
