--- a/assets/resources/styles/less/modules/_portfolio.less
+++ b/assets/resources/styles/less/modules/_portfolio.less
@@ -490,6 +490,10 @@
         overflow: hidden;
     }
 
+    .section-w {
+        display: none;
+    }
+
     .c-scrollbar_thumb {
         display: none;
     }
