--- a/assets/resources/styles/less/modules/_about.less
+++ b/assets/resources/styles/less/modules/_about.less
@@ -3524,6 +3524,10 @@
         display: none;
     }
 
+    .about-us-images {
+        display: none;
+    }
+
     #about2 {
         margin-top: 20%;
 
@@ -3573,12 +3577,12 @@
 
             .about-us-content {
                 margin-left: 11px;
-                margin-top: -50%;
+                margin-top: 0%;
                 width: 100%;
 
                 h1 {
-                    font-size: 57px;
-                    line-height: 55px;
+                    font-size: 33px;
+                    line-height: 43px;
                 }
             }
 
@@ -3598,8 +3602,28 @@
         }
     }
 
+    .client-section .grid-logo .logo-item {
+        width: 50%;
+        padding: 15px;
+        border-right: none;
+        position: relative;
+    }
 
+    .client-section .grid-logo .logo-item img {
+        width: 80%;
+        // -webkit-filter: grayscale(1);
+        filter: grayscale(1);
+    }
 
+    .client-section .grid-logo .bottom-border::after {
+        content: '';
+        position: absolute;
+        background: rgba(255, 255, 255, 0);
+        width: 100%;
+        height: 1px;
+        bottom: 0;
+        left: 0;
+    }
 
     // Mobile Team Section
 
@@ -3681,6 +3705,7 @@
         //     bottom: 0;
         //     .gradient(fade(@base__color-1, 0%), @base__color-1);
         // }
+
     }
 
     .top-row {
@@ -4108,8 +4133,8 @@
     }
 
     .c-hm-us_s2 {
-        padding-top: 4em;
-        padding-bottom: 4em;
+        padding-top: 8em;
+        padding-bottom: 8em;
     }
 
     .t-lead {
@@ -4171,7 +4196,7 @@
             background-position: center center;
             background-size: cover;
             background-repeat: no-repeat;
-            .shadow(0px 20px 30px -30px @base__color-4);
+            box-shadow: none;
             .transition();
 
             // &::before,
@@ -4194,6 +4219,10 @@
             //     bottom: 0;
             //     .gradient(fade(@base__color-1, 0%), @base__color-1);
             // }
+        }
+
+        .swiper-pagination-bullet {
+            border-radius: 0px
         }
 
         .top-row {
@@ -4256,7 +4285,7 @@
             }
 
             .swiper-pagination-bullet {
-                background-color: fade(@base__color-2, 90%);
+                background-color: fade(#000, 90%);
                 width: var(--swiper-pagination-bullet-width, var(--swiper-pagination-bullet-size, 16px));
                 height: var(--swiper-pagination-bullet-height, var(--swiper-pagination-bullet-size, 3px));
 
@@ -4294,7 +4323,7 @@
                                 17px;
                             font-size: 46px;
                             display: flex;
-                            color: #fff;
+                            color: #2b2b2b;
                             font-family: 'NeueHaasDisplay-me';
                             flex-wrap: wrap;
                             line-height: 1;
