--- a/assets/resources/styles/less/modules/_services.less
+++ b/assets/resources/styles/less/modules/_services.less
@@ -1091,7 +1091,7 @@
     position: absolute;
     top: -29px;
     right: 0;
-    font-family: 'NeueHaasDisplay-bold';
+    font-family: 'NeueHaasDisplay-me';
     z-index: 0;
 
     h1 {
@@ -1582,10 +1582,10 @@ section.horizontal .animation-wrap.to-left {
 }
 
 .aproch {
-  background: linear-gradient(1deg, #090e26, #031554);
-  padding: 10% 0;
+  padding: 5% 0;
   position: relative;
   padding-bottom: 0;
+  font-family: 'NeueHaasDisplay-me';
 
   .top-bg {
     position: absolute;
@@ -1602,13 +1602,17 @@ section.horizontal .animation-wrap.to-left {
     right: -370px;
   }
 
+  .m-0 {
+    margin-top: 0 !important;
+  }
+
   .container {
     width: 80%;
 
     h2 {
       padding: 20px 0%;
       font-size: 3em;
-      color: #fff;
+      color: #2b2b2b;
       letter-spacing: 1px;
       text-transform: uppercase;
       font-family: 'NeueHaasDisplay-me';
@@ -1616,6 +1620,9 @@ section.horizontal .animation-wrap.to-left {
 
     .approach-lis {
       margin-top: 10%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
 
       .flex-con {
         display: flex;
@@ -1624,31 +1631,26 @@ section.horizontal .animation-wrap.to-left {
         margin: 0%;
         position: relative;
         margin-bottom: 10%;
+        width: 45%;
+        overflow: hidden;
 
         .ap-no {
           position: relative;
           margin-left: 3%;
-          width: 34%;
+          width: 33%;
+          overflow: visible;
 
           h6 {
             .numb {
               font-size: 9em;
               font-family: 'NeueHaasDisplay-me';
-              color: #ffffff52;
+              color: #00000028;
               letter-spacing: 1px;
               text-transform: uppercase;
               position: relative;
             }
 
-            .cons {
-              font-size: 18px;
-              position: absolute;
-              left: 10px;
-              text-align: center;
-              bottom: 0;
-              top: 42%;
-              color: #fff;
-            }
+
 
           }
         }
@@ -1656,9 +1658,20 @@ section.horizontal .animation-wrap.to-left {
         .ap-prah {
           padding-right: 10%;
 
-          p {
-            color: #fff;
+          .cons {
+            font-size: 1.1em;
+            /* position: absolute; */
+            /* left: 10px; */
+            text-align: center;
+            color: #2b2b2b;
+            text-transform: uppercase;
+            margin-bottom: 9px;
           }
+        }
+
+        p {
+          color: #444;
+          letter-spacing: 1px;
         }
       }
     }
@@ -1667,8 +1680,111 @@ section.horizontal .animation-wrap.to-left {
 
 
 
+
 // Mobile Quries
 @media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
+  .aproch {
+    padding: 5% 0;
+    position: relative;
+    padding-bottom: 0;
+    font-family: 'NeueHaasDisplay-me';
+
+
+    .m-0 {
+      margin-top: 0 !important;
+    }
+
+    .container {
+      width: 80%;
+
+      h2 {
+        padding: 20px 0%;
+        font-size: 3em;
+        color: #2b2b2b;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        font-family: 'NeueHaasDisplay-me';
+      }
+
+      .approach-lis {
+        margin-top: 10%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+
+        .flex-con {
+          display: flex;
+          justify-content: normal;
+          align-items: center;
+          margin: 0%;
+          position: relative;
+          margin-bottom: 10%;
+          width: 100%;
+          overflow: hidden;
+
+          .ap-no {
+            position: relative;
+            margin-right: 3%;
+            width: 36%;
+            overflow: visible;
+
+            h6 {
+              .numb {
+                font-size: 6em;
+                font-family: 'NeueHaasDisplay-me';
+                color: #00000028;
+                letter-spacing: 1px;
+                text-transform: uppercase;
+                position: relative;
+              }
+
+
+
+            }
+          }
+
+          .ap-prah {
+            padding-right: 0%;
+
+            .cons {
+              font-size: 1.1em;
+              /* position: absolute; */
+              /* left: 10px; */
+              text-align: center;
+              color: #2b2b2b;
+              text-transform: uppercase;
+              margin-bottom: 9px;
+            }
+          }
+
+          p {
+            color: #444;
+            letter-spacing: 1px;
+          }
+        }
+      }
+    }
+  }
+
+  .services-s .flex-con .fle {
+    width: 100%;
+  }
+
+  .services-s .image {
+    width: 100%;
+    /* height: 940px; */
+    margin-bottom: 60px;
+    overflow: hidden;
+  }
+
+  .services-s .p-left {
+    padding-left: 0%;
+  }
+
+  .wrap-flex {
+    flex-wrap: wrap;
+  }
+
   .works__inner {
     padding: 0px 10px;
     height: 100vh;
@@ -1688,6 +1804,27 @@ section.horizontal .animation-wrap.to-left {
     }
   }
 
+  .accordion-title h2 span {
+    font-size: 0.5em;
+    letter-spacing: 2px;
+    position: absolute;
+    -webkit-text-stroke: 1px;
+    left: 7px;
+    top: 40px;
+  }
+
+  .wrap-reverse {
+    flex-wrap: wrap-reverse;
+  }
+
+  width: 100%;
+  position: relative;
+  color: #2B2B2B;
+
+  .services-s .flex-con .fle {
+    width: 100%;
+  }
+
   .works__hero {
     width: 100%;
   }
@@ -1697,7 +1834,7 @@ section.horizontal .animation-wrap.to-left {
   }
 
   #services {
-    padding: 7rem 5rem;
+    padding: 7rem 1rem;
 
     .accordion-title {
       padding: 40px 0;
@@ -1709,27 +1846,34 @@ section.horizontal .animation-wrap.to-left {
       letter-spacing: 3px;
       padding-left: 34px;
       line-height: 1.1;
-      -webkit-text-fill-color: #fff;
+      -webkit-text-fill-color: #2b2b2b;
       font-family: 'NeueHaasDisplay-roman';
-      -webkit-text-stroke-color: rgb(255, 255, 255);
+      -webkit-text-stroke-color: #ffffff;
       -webkit-text-stroke: 0.4px;
-      stroke: rgb(255, 255, 255);
-      color: #fff;
+      /* stroke: #ffffff; */
+      color: #2b2b2b;
     }
 
     .arrow-icon-large svg {
       fill: none;
       width: 22px;
       stroke-width: 8px;
-      stroke: #ffffff;
+      stroke: #2b2b2b;
     }
 
     .accordion-list p {
-      font-size: 16px;
+      font-size: 14px;
       padding-right: 0;
       letter-spacing: 2px;
       margin-bottom: 20px;
-      color: #fff;
+      color: #444;
+    }
+
+    .accordion-list li.open .cont {
+      max-height: 475px;
+      padding-bottom: 20px;
+      -webkit-transition: 0.4s all ease-in-out;
+      transition: 0.4s all ease-in-out;
     }
 
     .accordion-list .cont .en-btn_send {
