--- a/assets/resources/styles/less/modules/_contact.less
+++ b/assets/resources/styles/less/modules/_contact.less
@@ -996,18 +996,63 @@
 
 .section-w {
     width: 100%;
-    margin-bottom: 100px;
     position: relative;
     background-size: cover;
     clear: both;
     background-position: center;
     padding-top: 6%;
+    padding-bottom: 10%;
+
+    .en-form-submit {
+        margin: 0 0 0;
+        /* overflow: hidden; */
+        /* height: 100%; */
+        text-align: center;
+        margin-bottom: 0%;
+        margin-top: 70px;
+        margin-right: 120px;
+    }
 
     .wrapper-small {
         width: 100%;
         margin-right: auto;
         margin-left: auto;
         margin-bottom: 100px;
+    }
+
+    .wrappers {
+        width: 100%;
+        margin-right: auto;
+        margin-left: auto;
+        // margin-bottom: 100px;
+    }
+
+    .en-btn_contact,
+    .en-btn_dummy,
+    .en-btn_menu,
+    .en-btn_more,
+    .en-btn_nav,
+    .en-btn_plus,
+    .en-btn_seemore,
+    .en-btn_send {
+        position: relative;
+        display: inline-block;
+        height: auto;
+        margin: 0;
+        padding: 0;
+        color: #ffffff;
+        background: 0 0;
+        border: 0;
+        border-radius: 0;
+        outline: 0 !important;
+        font-family: 'NeueHaasDisplay-bol';
+        font-size: 1.4em;
+        letter-spacing: 1px;
+        line-height: inherit;
+        text-align: inherit;
+        text-transform: inherit;
+        text-indent: inherit;
+        text-decoration: none;
     }
 
     .c-col-12 {
@@ -1646,7 +1691,6 @@ body.dark .ar-work-cat,
         width: 100%;
         margin-right: auto;
         margin-left: auto;
-        margin-bottom: 100px;
     }
 
     .six-clum {
