--- a/assets/resources/styles/less/layout/_global.less
+++ b/assets/resources/styles/less/layout/_global.less
@@ -1027,3 +1027,11 @@ template {
 .flex-w {
   flex-wrap: wrap;
 }
+
+
+// Mobile Quries
+@media only screen and (min-device-width: 320px) and (max-device-width: 812px) {
+  .ht-cursor {
+    display: none;
+  }
+}
