--- a/assets/resources/styles/less/modules/_footer.less
+++ b/assets/resources/styles/less/modules/_footer.less
@@ -448,7 +448,17 @@
 
   lottie-player {
     filter: brightness(14.5);
+    stroke: red;
+    fill: #fff;
+
+    path {
+      stroke: rebeccapurple;
+      fill: red !important;
+    }
+
   }
+
+
 
   .bottom-footer {
     padding: 30px 0;
